--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -25,8 +25,10 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ],
+            
             "scripts": []
           },
           "configurations": {
@@ -94,5 +96,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "00ea1191-03ff-4278-87e6-8530f9b10d8c"
   }
 }
