--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "stripe/stripe-php": "^14.4",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
