--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "@cloudinary/ng": "^2.0.2",
     "@cloudinary/url-gen": "^1.19.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@stripe/stripe-js": "^3.3.0",
     "cloudinary": "^2.2.0",
     "image-conversion": "^2.1.1",
     "jwt-decode": "^4.0.0",
