--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "stripe/stripe-php": "^14.5",
-        "tymon/jwt-auth": "^2.1"
+        "tymon/jwt-auth": "^2.1",
+        "fruitcake/laravel-cors": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
