--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "@stripe/stripe-js": "^3.3.0",
     "cloudinary": "^2.2.0",
     "image-conversion": "^2.1.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "ngx-image-compress": "^15.1.6",
     "rxjs": "~7.8.0",
