Listo para servidor

--- a/Backend/public/.htaccess
+++ b/Backend/public/.htaccess
@@ -5,17 +5,18 @@
 
     RewriteEngine On
 
-    # Handle Authorization Header
+    # Handle Authorization Header (laravel)
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-    # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
+    # If an existing asset or directory is requested go to it as it is
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
+    RewriteRule ^ - [L]
 
-    # Send Requests To Front Controller...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    # routes starting per api are redirected to index.php (for laravel)
+    RewriteRule ^(api/.*) /index.php [NC,L]
+
+    # If the requested resource doesn't exist, use index.html (angular)
+    RewriteRule ^ /index.html
 </IfModule>
