--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@stripe/stripe-js": "^3.3.0",
     "cloudinary": "^2.2.0",
+    "emailjs-com": "^3.2.0",
     "image-conversion": "^2.1.1",
     "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
